--- a/src/variables.css
+++ b/src/variables.css
@@ -287,7 +287,7 @@
 	--b7: var(--color-dark-2);
 	--b8: var(--color-dark-1);
 	--b9: var(--color-dark-0);
-	--bc: var(--color-gray-2);
+	--bc: var(--color-dark-0);
 }
 
 /* 
