--- a/src/app.css
+++ b/src/app.css
@@ -74,8 +74,9 @@ body:has(dialog[open]) {
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-attachment: fixed;
-	background-size: 100vw 100vh;
+	line-height: 1.5;
+	/* background-attachment: fixed;
+	background-size: 100vw 100vh; */
 	@apply bg-base-0 text-base-content;
 }
 
@@ -104,10 +105,6 @@ h6,
 	@apply font-bold;
 }
 
-p {
-	line-height: 1.5;
-}
-
 pre {
 	font-family: var(--font-mono);
 	border-radius: 3px;
@@ -117,7 +114,7 @@ pre {
 }
 
 code {
-	@apply bg-primary-4/50 px-1 rounded whitespace-nowrap;
+	@apply bg-base-3 px-1.5 rounded-lg whitespace-nowrap;
 }
 
 .text-column {
@@ -138,6 +135,65 @@ button {
 button:focus:not(:focus-visible) {
 	outline: none;
 }
+/* 
+h1 {
+	font-size: clamp(2.5rem, calc(2.5rem + 1vw), 3.5rem);
+	margin: 0 0 2rem;
+	position: relative;
+	overflow: hidden;
+}
+
+h2 {
+	font-size: clamp(1.8rem, calc(1.8rem + 1vw), 2.5rem);
+}
+
+h3 {
+	font-size: clamp(1.6rem, calc(1.6rem + 1vw), 2rem);
+}
+
+h4 {
+	font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
+}
+
+h5 {
+	font-size: clamp(1.35rem, calc(1.35rem + 1vw), 1.5rem);
+}
+
+h6 {
+	font-size: clamp(1.1rem, calc(1.1rem + 1vw), 1.25rem);
+}
+
+a {
+	color: var(--darker);
+	text-decoration-thickness: 1px;
+	text-decoration-color: var(--dark);
+} */
+
+ul {
+	list-style-type: disc;
+	padding-left: 1.5rem;
+}
+
+ol {
+	list-style-type: decimal;
+	padding-left: 1.5rem;
+}
+
+ul ul {
+	list-style-type: circle;
+}
+
+ul::marker {
+	color: var(--accent);
+}
+
+.footnotes {
+	@apply text-base-7;
+
+	li {
+		margin-top: 1rem;
+	}
+}
 
 /* Custom css */
 p a,
@@ -152,4 +208,8 @@ p a,
 		background-position-y: 100%;
 		color: var(--p0);
 	}
+}
+
+li a {
+  @apply text-primary;
 }
