--- a/src/app.css
+++ b/src/app.css
@@ -1,46 +1,70 @@
-@import '@fontsource/fira-mono';
-@import '@fontsource-variable/inter';
-
-:root {
-	color-scheme: light;
-	--p0: var(--color-0);
-	--p1: var(--color-1);
-	--p2: var(--color-2);
-	--p3: var(--color-3);
-	--p4: var(--color-4);
-	--p5: var(--color-5);
-	--p6: var(--color-6);
-	--p7: var(--color-7);
-	--p8: var(--color-8);
-	--p9: var(--color-9);
-	--pc: var(--color-12);
-
-	--b0: var(--gray-0);
-	--b1: var(--gray-1);
-	--b2: var(--gray-2);
-	--b3: var(--gray-3);
-	--b4: var(--gray-4);
-	--b5: var(--gray-5);
-	--b6: var(--gray-6);
-	--b7: var(--gray-7);
-	--b8: var(--gray-8);
-	--b9: var(--gray-9);
-	--bc: var(--gray-10);
-}
+@import 'tailwindcss';
 
 [data-theme='dark'] {
 	color-scheme: dark;
-	--b0: var(--gray-10);
-	--b1: var(--gray-9);
-	--b2: var(--gray-8);
-	--b3: var(--gray-7);
-	--b4: var(--gray-6);
-	--b5: var(--gray-5);
-	--b6: var(--gray-4);
-	--b7: var(--gray-3);
-	--b8: var(--gray-2);
-	--b9: var(--gray-1);
-	--bc: var(--gray-3);
+}
+
+@theme {
+	--color-surface-0: light-dark(var(--color-zinc-50), var(--color-zinc-950));
+	--color-surface-1: light-dark(var(--color-zinc-100), var(--color-zinc-900));
+	--color-surface-2: light-dark(var(--color-zinc-200), var(--color-zinc-800));
+	--color-surface-3: light-dark(var(--color-zinc-300), var(--color-zinc-700));
+	--color-surface-4: light-dark(var(--color-zinc-400), var(--color-zinc-600));
+
+	--color-content-0: light-dark(var(--color-zinc-700), var(--color-zinc-300));
+	--color-content-1: light-dark(var(--color-zinc-400), var(--color-zinc-600));
+	/* --color-content-2: light-dark(var(--color-zinc-700), var(--color-zinc-300));
+	--color-content-3: light-dark(var(--color-zinc-600), var(--color-zinc-400)); */
+
+	--color-primary: hsl(200, 100%, 50%);
+	--color-primary-on: white;
+}
+
+@layer components {
+	.layout {
+		@apply grid max-w-2xl mx-auto px-4 pt-12;
+	}
+
+	.btn {
+		@apply inline-flex items-center justify-center gap-2 px-4 py-2 rounded-md font-medium disabled:opacity-50;
+		transition-property: translate;
+    transition-duration: 0.3s;
+
+		&:hover {
+			translate: 0 -4px;
+		}
+	}
+
+	.variant-primary {
+		@apply bg-primary text-primary-on;
+	}
+
+	.prose {
+		@apply max-w-prose leading-7;
+	}
+}
+
+@layer base {
+	button {
+		cursor: pointer;
+	}
+
+	h1,
+	.heading-1 {
+		@apply text-4xl font-bold tracking-tight;
+	}
+	h2,
+	.heading-2 {
+		@apply text-3xl font-bold tracking-tight;
+	}
+	h3,
+	.heading-3 {
+		@apply text-2xl font-bold;
+	}
+	h4,
+	.heading-4 {
+		@apply text-xl font-bold;
+	}
 }
 
 :root {
@@ -77,44 +101,19 @@ body {
 	line-height: 1.5;
 	/* background-attachment: fixed;
 	background-size: 100vw 100vh; */
-	@apply bg-base-0 text-base-content;
+	background-color: var(--color-surface-0);
+	color: var(--color-content-0);
 }
-
-h1,
-.H1 {
-	@apply text-4xl font-bold;
-}
-h2,
-.H2 {
-	@apply text-3xl font-bold;
-}
-h3,
-.H3 {
-	@apply text-2xl font-bold;
-}
-h4,
-.H4 {
-	@apply text-xl font-bold;
-}
-h5,
-.H5 {
-	@apply text-lg font-bold;
-}
-h6,
-.H6 {
-	@apply font-bold;
-}
-
 pre {
 	font-family: var(--font-mono);
 	border-radius: 3px;
 	padding: 0.5em;
 	overflow-x: auto;
-	@apply bg-b1;
+	/* @apply bg-b1; */
 }
 
 code {
-	@apply bg-base-3 px-1.5 rounded-lg whitespace-nowrap;
+	@apply px-1.5 rounded-lg whitespace-nowrap;
 }
 
 .text-column {
@@ -135,39 +134,6 @@ button {
 button:focus:not(:focus-visible) {
 	outline: none;
 }
-/* 
-h1 {
-	font-size: clamp(2.5rem, calc(2.5rem + 1vw), 3.5rem);
-	margin: 0 0 2rem;
-	position: relative;
-	overflow: hidden;
-}
-
-h2 {
-	font-size: clamp(1.8rem, calc(1.8rem + 1vw), 2.5rem);
-}
-
-h3 {
-	font-size: clamp(1.6rem, calc(1.6rem + 1vw), 2rem);
-}
-
-h4 {
-	font-size: clamp(1.5rem, calc(1.5rem + 1vw), 1.8rem);
-}
-
-h5 {
-	font-size: clamp(1.35rem, calc(1.35rem + 1vw), 1.5rem);
-}
-
-h6 {
-	font-size: clamp(1.1rem, calc(1.1rem + 1vw), 1.25rem);
-}
-
-a {
-	color: var(--darker);
-	text-decoration-thickness: 1px;
-	text-decoration-color: var(--dark);
-} */
 
 ul {
 	list-style-type: disc;
@@ -188,7 +154,8 @@ ul::marker {
 }
 
 .footnotes {
-	@apply text-base-7;
+	@apply text-sm;
+	color: var(--contrast);
 
 	li {
 		margin-top: 1rem;
@@ -206,10 +173,10 @@ p a,
 
 	&:hover {
 		background-position-y: 100%;
-		color: var(--p0);
+		color: var(--color-primary-on);
 	}
 }
 
 li a {
-  @apply text-primary;
+	@apply text-primary;
 }
