--- a/src/lib/prism.css
+++ b/src/lib/prism.css
@@ -27,10 +27,10 @@ pre[class*='language-'] {
 	overflow: auto;
 	border-radius: 0.3em;
 }
-/* :not(pre) > code[class*='language-'],
+:not(pre) > code[class*='language-'],
 pre[class*='language-'] {
 	background: #272822;
-} */
+}
 :not(pre) > code[class*='language-'] {
 	padding: 0.1em;
 	border-radius: 0.3em;
