--- a/src/app.css
+++ b/src/app.css
@@ -46,33 +46,35 @@
 	h1,
 	.heading-1 {
 		@apply text-content-0 text-3xl font-bold tracking-tight not-first:mt-[1em];
-
 	}
+
 	h2,
 	.heading-2 {
 		@apply text-content-0 text-2xl font-bold tracking-tight not-first:mt-[1em];
-
 	}
+
 	h3,
 	.heading-3 {
 		@apply text-content-0 text-xl font-bold not-first:mt-[1em];
-
 	}
+
 	h4,
 	.heading-4 {
 		@apply text-content-0 text-lg font-bold not-first:mt-[1em];
-
 	}
 
 	.display-1 {
 		font-size: clamp(2rem, 9vw, 3.5rem);
 	}
+
 	.display-2 {
 		font-size: clamp(1.5rem, 6vw, 2.5rem);
 	}
+
 	.display-3 {
 		font-size: clamp(1rem, 4vw, 1.5rem);
 	}
+
 	.display-4 {
 		font-size: clamp(0.75rem, 2vw, 1rem);
 	}
@@ -80,9 +82,11 @@
 	th {
 		text-align: start;
 	}
+
 	tr {
 		border-bottom: 1px solid var(--color-surface-3);
 	}
+
 	th,
 	td {
 		padding-block: 0.5rem;
@@ -99,18 +103,26 @@
 	hr {
 		@apply border-surface-3;
 	}
+
+	.article {
+		img,
+		video {
+			@apply rounded-lg;
+		}
+	}
 }
 
-@layer components {
-	.layout {
-		@apply mx-auto grid max-w-2xl px-4 pt-12;
-	}
+@utility btn {
+	@apply inline-flex items-center justify-center gap-2 rounded-md px-4 py-2 font-medium transition-all duration-300 disabled:cursor-not-allowed disabled:opacity-50;
 
-	.btn {
-		@apply inline-flex items-center justify-center gap-2 rounded-md px-4 py-2 font-medium transition-all duration-300 disabled:cursor-not-allowed disabled:opacity-50;
-		&:hover:not(:disabled) {
-			transform: translateY(-2px);
-		}
+	&:hover:not(:disabled) {
+		transform: translateY(-2px);
+	}
+}
+
+@layer utilities {
+	.layout {
+		@apply mx-auto grid max-w-2xl px-4 pt-[4vh];
 	}
 
 	.prose {
@@ -134,9 +146,7 @@
 	.input {
 		@apply bg-surface-1 border-surface-3 text-content-0 placeholder:text-content-1 focus:ring-primary w-full rounded-md border px-3 py-2 focus:border-transparent focus:ring-2 focus:outline-none disabled:cursor-not-allowed disabled:opacity-50;
 	}
-}
 
-@layer utilities {
 	/* Button Variants */
 	.variant-base {
 		@apply bg-surface-2 text-content-0;
@@ -160,8 +170,9 @@
 }
 
 :root {
-	--font-body: 'Inter Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-body:
+		'Inter Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	font-family: var(--font-body);
 	scroll-behavior: smooth;
@@ -196,6 +207,7 @@ body {
 	background-color: var(--color-surface);
 	color: var(--color-content);
 }
+
 /* pre {
 	font-family: var(--font-mono);
 	border-radius: 3px;
