--- a/src/app.css
+++ b/src/app.css
@@ -18,10 +18,12 @@
 	--s5: clamp(3.05rem, 2.04rem + 5.08vw, 5.66rem);
 }
 @theme {
-	--color-base-100: oklch(100% 0 0);
-	--color-base-200: oklch(98% 0 0);
-	--color-base-300: oklch(92% 0.004 286.32);
-	--color-base-content: oklch(21% 0.006 285.885);
+	--color-bg-dark: oklch(90% 0 var(--color-hue, 0));
+	--color-bg: oklch(95% 0 var(--color-hue, 0));
+	--color-bg-light: oklch(100% 0 var(--color-hue, 0));
+
+	--color-text: oklch(5% 0 var(--color-hue, 0));
+	--color-text-muted: oklch(30% 0 var(--color-hue, 0));
 
 	--color-primary: oklch(68% 0.19 var(--color-hue, 0));
 	--color-primary-content: white;
@@ -30,10 +32,12 @@
 }
 
 [data-theme='dark'] {
-	--color-base-100: oklch(25.33% 0.016 252.42);
-	--color-base-200: oklch(23.26% 0.014 253.1);
-	--color-base-300: oklch(21.15% 0.012 254.09);
-	--color-base-content: oklch(97.807% 0.029 256.847);
+	--color-bg-dark: oklch(0% 0 var(--color-hue, 0));
+	--color-bg: oklch(5% 0 var(--color-hue, 0));
+	--color-bg-light: oklch(10% 0 var(--color-hue, 0));
+
+	--color-text: oklch(95% 0 var(--color-hue, 0));
+	--color-text-muted: oklch(75% 0 var(--color-hue, 0));
 }
 
 @layer base {
@@ -43,22 +47,22 @@
 
 	h1,
 	.heading-1 {
-		@apply text-base-content text-3xl font-bold tracking-tight not-first:mt-[1em];
+		@apply text-text text-3xl font-bold tracking-tight not-first:mt-[1em];
 	}
 
 	h2,
 	.heading-2 {
-		@apply text-base-content text-2xl font-bold tracking-tight not-first:mt-[1em];
+		@apply text-text text-2xl font-bold tracking-tight not-first:mt-[1em];
 	}
 
 	h3,
 	.heading-3 {
-		@apply text-base-content text-xl font-bold not-first:mt-[1em];
+		@apply text-text text-xl font-bold not-first:mt-[1em];
 	}
 
 	h4,
 	.heading-4 {
-		@apply text-base-content text-lg font-bold not-first:mt-[1em];
+		@apply text-text text-lg font-bold not-first:mt-[1em];
 	}
 
 	.display-1 {
@@ -82,7 +86,7 @@
 	}
 
 	tr {
-		border-bottom: 1px solid var(--color-base-300);
+		border-bottom: 1px solid var(--color-bg-dark);
 	}
 
 	th,
@@ -91,7 +95,7 @@
 	}
 
 	figcaption {
-		@apply text-base-content text-sm;
+		@apply text-text text-sm;
 	}
 
 	blockquote {
@@ -99,7 +103,7 @@
 	}
 
 	hr {
-		@apply border-base-300;
+		@apply border-bg-dark;
 	}
 
 	.article {
@@ -123,14 +127,16 @@
 }
 /* Cards */
 @utility card {
-	@apply border-base-300 overflow-hidden rounded-lg border shadow;
+	@apply border-bg-dark overflow-hidden rounded-lg border shadow;
 }
 
 /* Form Elements */
-
+@utility label {
+	@apply flex flex-col gap-1;
+}
 @utility input {
 	width: clamp(3rem, 20rem, 100%);
-	@apply bg-base-200 focus-within:ring-primary flex shrink items-center gap-2 rounded px-3 py-2 ring ring-transparent disabled:cursor-not-allowed disabled:opacity-50;
+	@apply bg-bg focus-within:ring-primary flex shrink items-center gap-2 rounded px-3 py-2 ring ring-transparent disabled:cursor-not-allowed disabled:opacity-50;
 
 	:where(input) {
 		@apply grow outline-hidden;
@@ -138,7 +144,7 @@
 }
 
 @utility variant-base {
-	@apply bg-base-300 text-base-content;
+	@apply bg-bg-dark text-text;
 }
 
 @utility variant-primary {
@@ -146,7 +152,7 @@
 }
 
 @utility variant-ghost {
-	@apply bg-base-200 text-base-content;
+	@apply bg-bg text-text;
 }
 
 @utility variant-light {
@@ -154,13 +160,12 @@
 }
 
 @utility variant-outline {
-	@apply border-primary text-base-content hover:bg-primary hover:text-primary-content border-2;
+	@apply border-primary text-text hover:bg-primary hover:text-primary-content border-2;
 }
 
 :root {
-	--font-body:
-		'Inter Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-body: 'Inter Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	font-family: var(--font-body);
 	scroll-behavior: smooth;
@@ -182,7 +187,7 @@ body:has(dialog[open]) {
 } */
 
 /* :root *::-webkit-scrollbar-thumb {
-	background-color: var(--color-base-300);
+	background-color: var(--color-bg-dark);
 	border-radius: 1rem;
 } */
 
@@ -192,8 +197,8 @@ body {
 	line-height: 1.5;
 	/* background-attachment: fixed;
 	background-size: 100vw 100vh; */
-	background-color: var(--color-base-100);
-	color: var(--color-base-content);
+	background-color: var(--color-bg-light);
+	color: var(--color-text);
 }
 
 /* pre {
@@ -206,7 +211,7 @@ body {
 
 */
 code {
-	@apply bg-base-300 rounded-lg px-1.5 whitespace-nowrap;
+	@apply bg-bg-dark rounded-lg px-1.5 whitespace-nowrap;
 }
 
 .text-column {
@@ -255,14 +260,14 @@ li::marker {
 }
 
 .footnotes {
-	@apply text-base-content text-sm;
+	@apply text-text text-sm;
 
 	li {
 		margin-top: 1rem;
 	}
 
 	li::marker {
-		@apply text-base-content;
+		@apply text-text;
 	}
 }
 
@@ -308,8 +313,8 @@ a:has(code) {
 		to bottom right,
 		var(--color-primary),
 		var(--color-primary),
-		var(--color-base-100),
-		var(--color-base-100)
+		var(--color-bg-light),
+		var(--color-bg-light)
 	);
 	color: #fff;
 	background-size: 300% 300%;
